Refractored the Code